# OpenBiliClaw

./: .coveragerc.sources  .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_EN.md  alembic.ini  config.example.toml  docker-compose.prebuilt.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/scripts/: sync-aggregate-release.sh
.github/workflows/: build-installers.yml  ci.yml  publish-chrome-webstore.yml  release-desktop.yml  release-docker.yml  release-extension.yml  update-chrome-webstore-listing.yml  verify-release-completeness.yml
.superpowers/sdd/: final-evaluator-cap-fix-report.md  final-recovery-fix-report.md  task-4-report.md  task-8-report.md  task-9-report.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_vnext_baseline.py  0002_auth_state.py  0003_job_run_leases.py  0004_job_success_continuations.py
deploy/e2e/: README.md  docker-compose.e2e-override.yml  docker-compose.yml
docker/: ollama-bundled-entrypoint.sh  ollama-bundled.Dockerfile  seed-bge-m3.sh
docs/: agent-deployment.md  agent-install.md  architecture.md  changelog.md  chrome-webstore-listing.md  contributing.md  docker-deployment.md  faq.md  index.html  index.md  installation.md  manual-e2e.md  mobile-web-spec.md  native-save-e2e.md  openclaw-quickstart.md  platform-source-integration.md  privacy.md  seo.md  sitemap.xml  spec.md  v0.1-todolist.md
docs/diagrams/: recommendation-architecture.html  web-architecture.html
docs/e2e/: docker-first-run.md  extension.md  source-install.md  web.md
docs/images/: social-preview.src.html
docs/modules/: api-auth.md  api.md  bilibili.md  cli.md  config.md  discovery.md  extension.md  init.md  integrations.md  llm.md  memory.md  recommendation.md  runtime.md  saved-sync.md  soul.md  storage.md  vnext-ai.md  vnext-api.md  vnext-domain.md  vnext-persistence.md  vnext-sources.md  vnext-use-cases-jobs.md  web.md  youtube.md
docs/plans/: 2026-03-08-m12-config-system-design.md  2026-03-08-m12-config-system.md  2026-03-08-m42-preference-layer-design.md  2026-03-08-m42-preference-layer.md  2026-03-11-extension-sidepanel-design.md  2026-03-11-m86-manual-refresh-design.md  (+58 more)
extension/: manifest.firefox.json  manifest.json  package-lock.json  package.json  tsconfig.popup.json  tsconfig.tests.json
litellm/: config.yaml
openapi/: generate-client.mjs  openapi.json
packaging/: build.py  entry.py  make_model_seed.py  openbiliclaw.iss  openbiliclaw.spec
scripts/: _model_runtime.py  agent_bootstrap.py  build-web.mjs  build_chrome_webstore_assets.py  build_chrome_webstore_demo_covers.py  capture_chrome_webstore_ui.py  check-source-contracts.sh  check_quality_baseline.py  chrome_webstore_demo.py  generate_api_route_contract.py  generate_discovery_personas.py  generate_quality_baseline.py  install.ps1  install.sh  release.py  run_auto_optimize.py  run_discovery_auto_optimize.py  run_discovery_eval.py  run_eval_round.py  run_init_eval.py  run_recommendation_auto_optimize.py  run_speculation_auto_optimize.py  run_speculation_eval.py  run_update_auto_optimize.py  run_update_eval.py  runtime_bootstrap.py  snapshot-exports.mjs  test-docker-e2e.sh  tsconfig.scripts.json
tests/: e2e_auth_fixtures.py  model_route_helpers.py  test_account_sync.py  test_agent_bootstrap.py  test_aggregate_release_workflow.py  test_api_app.py  test_api_auth.py  test_api_bili_tasks.py  test_api_config_guards.py  test_api_config_probe.py  test_api_config_transactional.py  test_api_degraded_mode.py  test_api_image_proxy.py  test_api_insight_feedback.py  test_api_model_config.py  test_api_pilot_endpoints_contract.py  test_api_reddit_tasks.py  test_api_route_contract.py  test_api_xhs_ingest.py  test_architecture.py  test_auth_core.py  test_autostart.py  test_avoidance_speculator.py  test_bilibili_api.py  test_bilibili_api_integration.py  test_bilibili_auth.py  test_bilibili_native_save.py  test_bundled_embedding_entry.py  test_candidate_eval_coordinator.py  test_category_migration.py  test_chrome_webstore_demo.py  test_chrome_webstore_listing.py  test_ci_status_capture.py  test_cli.py  test_cli_models.py  test_config.py  test_dashscope_embedding.py  test_database.py  test_delight_scorer.py  test_desktop_pending_actions.py  (+164 more)
(+625 files in other folders)
