[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbiliclaw"
version = "0.4.0"
description = "Your local-first, cross-platform AI discovery friend for Bilibili, Zhihu, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OpenBiliClaw Contributors" },
]
keywords = ["bilibili", "zhihu", "ai", "agent", "recommendation", "content-discovery", "cross-platform", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "httpx[socks]>=0.27",
    "scrapetube>=2.1",
    "yt-dlp>=2024.1.0",
    "openai>=1.0",
    # X (Twitter) discovery uses the import package ``twitter_cli``. Keep it in
    # the default install so enabling [sources.twitter] never fails at runtime.
    "twitter-cli>=0.8.5",
    "fastapi>=0.115",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "cryptography>=43",
    "uvicorn>=0.32",
    "pydantic-evals>=2.11.0",
    "pydantic-ai-slim[openai]>=2.11.0",
    "huey>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
    "PyYAML>=6.0",
]
browser = [
    "playwright>=1.40",
]

[project.scripts]
openbiliclaw = "openbiliclaw.cli:app"

[project.urls]
Homepage = "https://github.com/whiteguo233/OpenBiliClaw"
Repository = "https://github.com/whiteguo233/OpenBiliClaw"
Issues = "https://github.com/whiteguo233/OpenBiliClaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openbiliclaw"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "C90",  # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]  # Installer and release scripts contain long command strings.

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "huey",
    "huey.*",
    "playwright.*",
    "twitter_cli",
    "twitter_cli.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real Bilibili API checks that require local credentials",
]

[tool.importlinter]
root_package = "openbiliclaw"

[[tool.importlinter.contracts]]
name = "Domain is independent"
type = "forbidden"
source_modules = [
    "openbiliclaw.features.activity.domain",
    "openbiliclaw.features.profile.domain",
    "openbiliclaw.features.feed.domain",
    "openbiliclaw.features.library.domain",
    "openbiliclaw.features.chat.domain",
    "openbiliclaw.features.sources.domain",
]
forbidden_modules = [
    "openbiliclaw.infrastructure",
    "openbiliclaw.api",
]

[[tool.importlinter.contracts]]
name = "Features do not depend on HTTP"
type = "forbidden"
source_modules = ["openbiliclaw.features"]
forbidden_modules = ["openbiliclaw.api"]

[[tool.importlinter.contracts]]
name = "Features do not depend on infrastructure"
type = "forbidden"
source_modules = ["openbiliclaw.features"]
forbidden_modules = ["openbiliclaw.infrastructure"]

[[tool.importlinter.contracts]]
name = "Infrastructure does not depend on HTTP"
type = "forbidden"
source_modules = ["openbiliclaw.infrastructure"]
forbidden_modules = ["openbiliclaw.api"]

[tool.coverage.run]
source_pkgs = [
    "openbiliclaw.api",
    "openbiliclaw.features",
    "openbiliclaw.infrastructure",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
